Reorganizing the css to ensure better readability and structure

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Importing fonts from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300&family=Playfair+Display:ital@0;1&family=Roboto+Slab:wght@100;400&display=swap');
 
-/* Setting up root variables for easy theme management */
+/* Root Variables for Theme Management */
 :root {
     --regular-heading: 'Roboto Slab', serif;
     --regular-heading-weight: 400;
@@ -17,25 +17,68 @@
     --primary-green: #007229;
 }
 
-/* Universal style: Sets the default font for all elements */
+/* Universal Styles */
 * {
     font-family: var(--body);
     font-weight: var(--body-weight);
 }
 
-/* Body style: Removes default margin and padding, sets background color */
+/* Body Style */
 body {
     margin: 0;
     padding: 0;
     background-color: var(--primary-white);
 }
 
+/* Page Container */
 .page-container {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
+/* Header and Navigation Styles */
+nav {
+    background-color: var(--primary-black);
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: space-around;
+    border-bottom: 40px;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    gap: 20px;
+    margin: 0;
+    padding-top: 10px;
+    text-transform: uppercase;
+}
+
+ul a {
+    text-decoration: none;
+    color: white;
+}
+
+nav ul a:hover {
+    background-color: var(--primary-red);
+    border-radius: 10px;
+    padding: .75rem;
+    font-size: 1.05rem;
+    color: var(--primary-black);
+    transition: all 0.3s ease;
+}
+
+.nav-item {
+    line-height: 1.5;
+}
+
+/* Hero Section Styles */
 .hero {
     background-image: url(assets/img/pyramid-landscape.jpg);
     background-position: center;
@@ -54,13 +97,17 @@ body {
 .hero h1 {
     font-size: 2.5rem;
     margin: 20px;
-
 }
 
 .hero p {
     max-width: 600px;
     margin-bottom: 20px;
+}
 
+/* Button Styles */
+button {
+    font-family: var(--call-to-action);
+    font-weight: var(--call-to-action-weight);
 }
 
 .hero button a {
@@ -76,7 +123,6 @@ body {
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin: 20px;
-
 }
 
 .hero button:hover {
@@ -84,12 +130,11 @@ body {
     border-radius: 10px;
     padding: .75rem;
     font-size: 1.05rem;
-    text-decoration: none;
     color: var(--primary-black);
     transition: all 0.3s ease;
 }
 
-/* Heading styles: Applies specific font and weight to all heading elements and body */
+/* Heading Styles */
 h1,
 h2,
 h3,
@@ -102,68 +147,18 @@ header {
     font-weight: var(--regular-heading-weight);
 }
 
+/* Main Content */
 main {
     flex-grow: 1;
 }
 
-/* Button styles: Sets the font for buttons */
-button {
-    font-family: var(--call-to-action);
-    font-weight: var(--call-to-action-weight);
-}
-
-/* Blockquote style: Sets the font for blockquote elements */
+/* Blockquote Style */
 blockquote {
     font-family: var(--quotes);
     font-weight: var(--quotes-weight);
 }
 
-/* Navbar styling: Sets background color, positioning, and layout */
-nav {
-    background-color: var(--primary-black);
-    border-bottom: 40px;
-    position: sticky;
-    top: 0;
-    z-index: 100;
-    display: flex;
-    justify-content: space-around;
-}
-
-/* Style for unordered lists: Sets list style, layout, and spacing */
-ul {
-    list-style-type: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5rem;
-    gap: 20px;
-    text-transform: uppercase;
-    margin: 0;
-    padding-top: 10px;
-}
-
-/* Style for links in the list: Sets text decoration and color */
-ul a {
-    text-decoration: none;
-    color: white;
-}
-
-/* Hover effect for links: Changes background color, border radius, padding, font size, and transition effects */
-nav ul a:hover {
-    background-color: var(--primary-red);
-    border-radius: 10px;
-    padding: .75rem;
-    font-size: 1.05rem;
-    text-decoration: none;
-    color: var(--primary-black);
-    transition: all 0.3s ease;
-}
-
-/* Line-height for nav items: Ensures consistent line spacing */
-.nav-item {
-    line-height: 1.5;
-}
-
+/* Footer Styles */
 footer {
     background-color: var(--primary-black);
     color: var(--primary-white);
